Server can be dockeret

--- a/ClientTests/ClientTests.csproj
+++ b/ClientTests/ClientTests.csproj
@@ -17,6 +17,10 @@
   </ItemGroup>
 
   <ItemGroup>
+    <ProjectReference Include="..\Client\client.client\Client.esproj" />
+  </ItemGroup>
+
+  <ItemGroup>
     <Using Include="Xunit" />
   </ItemGroup>
 
