--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -22,10 +22,31 @@ stages:
       demands:
         - agent.name -equals PipelineAgent
     steps:
-    - task: Docker@2
-      displayName: Build an image
+    - task: PowerShell@2
+      displayName: 'Check if Docker is running'
       inputs:
-        command: build
-        dockerfile: '$(Build.SourcesDirectory)/Client/Dockerfile'
+        targetType: 'inline'
+        script: |
+          Write-Host "Checking if Docker is running..."
+          try {
+            docker version | Out-Null
+            Write-Host "Docker is running."
+          }
+          catch {
+            Write-Error "Docker is not running. Please start Docker Desktop before running the pipeline."
+            exit 1
+          }
+    - task: Docker@2
+      displayName:  'Build server Docker image'
+      inputs:
+        command: 'build'
+        Dockerfile: 'Server/Dockerfile'
         tags: |
-          $(tag)
+          server: local
+    - task: Docker@2
+      displayName:  'Build Client Docker image'
+      inputs:
+        command: 'build'
+        Dockerfile: 'Client/Dockerfile'
+        tags: |
+          client: local
