--- a/Server/Dockerfile
+++ b/Server/Dockerfile
@@ -1,28 +1,24 @@
-# Use the ASP.NET runtime image as the base for running the app
 FROM mcr.microsoft.com/dotnet/aspnet:8.0 AS base
 WORKDIR /app
 EXPOSE 8080
 EXPOSE 8081
 
-# Use the SDK image to build the app
 FROM mcr.microsoft.com/dotnet/sdk:8.0 AS build
 ARG BUILD_CONFIGURATION=Release
 WORKDIR /src
 
-# Copy only the server project file and restore dependencies
-COPY ["Server/Server.csproj", "Server/"]
-RUN dotnet restore "Server/Server.csproj"
+# Copy only the project file (no Server/ prefix)
+COPY ["Server.csproj", "./"]
+RUN dotnet restore "Server.csproj"
 
-# Copy all source files and build the project
-COPY ./Server ./Server
-WORKDIR "/src/Server"
+# Copy all source files inside current context
+COPY . .
+WORKDIR "/src"
 RUN dotnet build "Server.csproj" -c $BUILD_CONFIGURATION -o /app/build
 
-# Publish the app to a folder for the final image
 FROM build AS publish
 RUN dotnet publish "Server.csproj" -c $BUILD_CONFIGURATION -o /app/publish /p:UseAppHost=false
 
-# Final stage: create the runtime image
 FROM base AS final
 WORKDIR /app
 COPY --from=publish /app/publish .
