Trying to make a setup

--- a/E2E_Testing/E2E_Testing.csproj
+++ b/E2E_Testing/E2E_Testing.csproj
@@ -18,6 +18,7 @@
 
   <ItemGroup>
     <ProjectReference Include="..\Client\Client.csproj" />
+    <ProjectReference Include="..\Server\Server.csproj" />
   </ItemGroup>
 
   <ItemGroup>
