--- a/Client/Client.csproj
+++ b/Client/Client.csproj
@@ -16,4 +16,8 @@
     <Folder Include="Interfaces\" />
   </ItemGroup>
 
+  <ItemGroup>
+    <ProjectReference Include="..\Connection\Connection.csproj" />
+  </ItemGroup>
+
 </Project>
